--- a/examples/local/otel-config.yaml
+++ b/examples/local/otel-config.yaml
@@ -20,6 +20,8 @@ processors:
     check_interval: 5s
 
 exporters:
+  otlphttp:
+    endpoint: "http://localhost:5318"
   logging:
     logLevel: debug
 
@@ -28,10 +30,10 @@ service:
     traces:
       receivers: [otlp]
       processors: [memory_limiter, batch]
-      exporters: [logging]
+      exporters: [otlphttp]
     metrics:
       receivers: [otlp]
       processors: [memory_limiter, batch]
-      exporters: [logging]
+      exporters: [otlphttp]
 
   extensions: [memory_ballast, zpages]
